# blitzbackend

./: .CMakeLists.txt.swp  .gitignore  .travis.yml  CMakeLists.txt  README.md
src/: .main.cpp.swp  .match.cpp.swp  .match.hpp.swp  .matchhandler.cpp.swp  .matchhandler.hpp.swp  .matchinstance.cpp.swp  .matchinstance.hpp.swp  .settings.cpp.swp  .settings.hpp.swp  .table.cpp.swp  .table.hpp.swp  .ycm_extra_conf.py  CMakeCache.txt  Makefile  cmake_install.cmake  emailsender.cpp  emailsender.hpp  godreader.cpp  godreader.hpp  main.cpp  match.cpp  match.hpp  matchhandler.cpp  matchhandler.hpp  matchinstance.cpp  matchinstance.hpp  matchwatcher.cpp  matchwatcher.hpp  mod.cpp  mod.hpp  nation.cpp  nation.hpp  regexbatcher.cpp  regexbatcher.hpp  settings.cpp  settings.hpp  table.cpp  table.hpp  turnparser.cpp  turnparser.hpp  (+2 more)
